Bugfix : fux bad z-index for overlay

--- a/client/web/web/media/style/common.css
+++ b/client/web/web/media/style/common.css
@@ -284,6 +284,7 @@ div#overlay {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	z-index: 50;
 }
 
 div#lock {
